[package]
name = "ntt"
version = "0.1.2"
edition = "2021"
description = "Implements the fast NTT (number theoretic transform) for polynomial multiplcation."
license = "MIT"
documentation = "https://docs.rs/ntt"
homepage = "https://github.com/lattice-based-cryptography/ntt"
repository = "https://github.com/lattice-based-cryptography/ntt"

[dependencies]
polynomial-ring = "0.5.0"