[package]
name = "ntt"
version = "0.1.9"
edition = "2021"
description = "Fast NTT (number theoretic transform) for polynomial multiplcation for primes, prime power, and certain composite moduli."
license = "MIT"
documentation = "https://docs.rs/ntt"
homepage = "https://github.com/lattice-based-cryptography/ntt"
repository = "https://github.com/lattice-based-cryptography/ntt"

[dependencies]
polynomial-ring = "0.5.0"
reikna = "0.12.3"